comecei a escrever o conteúdo

--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 <body>
         <main>
             <header>
-                <h1>Título do site</h1>
+                <h1>Cursos grátis</h1>
             </header>
             <article>
-                <h2>Artigo 001</h2>
-                <p>Texto artigo 001</p>
+                <h2>Curso de html5 e css3</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit, magnam corporis? Est quae quo officiis voluptatem pariatur, voluptates perferendis necessitatibus quod, ipsum, assumenda recusandae labore aperiam! Dolore error eum dolores.</p>
             </article>
             <article>
-                <h2>Artigo 002</h2>
-                <p>Texto artigo 002</p>
+                <h2>Curso de JavaScript</h2>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quo illo odit sequi, alias ea quos, nostrum cupiditate velit voluptas eum doloremque, impedit nulla voluptatibus aspernatur molestiae deserunt inventore vero quod!</p>
             </article>
         </main>
 </body>
